Misc code cleanups (#10549)